--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
                 <i class="uil uil-message nav__icon"></i>Contact
               </a>
             </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">
+                <i class="uil uil-book-open nav__icon"></i>Contact
+              </a>
+            </li>
           </ul>
           <i class="uil uil-times nav__close" id="nav-close"></i>
         </div>
