updated missing home icon and some typo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <ul class="nav__list grid">
             <li class="nav__item">
               <a href="#home" class="nav__link active-link">
-                <i class="uil uil-estate nav__icon"></i>Home
+                <i class="uil uil-house-user nav__icon"></i>Home
               </a>
             </li>
             <li class="nav__item">
@@ -58,8 +58,8 @@
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">
-                <i class="uil uil-book-open nav__icon"></i>Contact
+              <a href="./404/index.html" class="nav__link">
+                <i class="uil uil-book-open nav__icon"></i>Blog
               </a>
             </li>
           </ul>
