--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               </a>
             </li>
             <li class="nav__item">
-              <a href="./404/index.html" class="nav__link">
+              <a href="https://itstechornothing.blogspot.com" class="nav__link">
                 <i class="uil uil-book-open nav__icon"></i>Blog
               </a>
             </li>
