--- a/index.html
+++ b/index.html
@@ -136,9 +136,10 @@
             </div>
             <div class="home__data">
               <h1 class="home__title">Hi, I'm Ama</h1>
-              <h3 class="home__subtitle">Web & Software Developer</h3>
+              <h3 class="home__subtitle">Web Developer & Digital Marketer</h3>
               <p class="home__description">
-                I design and develop high-end scalable web & software applications.
+                I design and develop high-end scalable web applications 
+                and execute strategic marketing campaigns.
               </p>
               <a href="#contact" class="button button--flex">
                 Contact Me <i class="uil uil-message button__icon"></i>
@@ -164,12 +165,12 @@
           <div class="about__data">
             <p class="about__description">
               I deliver high-end scalable applications
-              with the latest technologies, ensuring quality, functionality, aesthetics, and security.
-              I also love the smell of hardcover books and would <em>probably</em> beat you in swimming race.
+              with the latest technologies, delivering high quality and functionality.
+              I also execute strategic marketing campaigns with sole aim of driving growth.
             </p>
             <div class="about__info">
               <div>
-                <span class="about__info-title">03+</span>
+                <span class="about__info-title">04+</span>
                 <span class="about__info-name"
                   >Years <br />
                   experience</span
@@ -357,7 +358,7 @@
                     <div class="skills__header">
                         <i class="uil uil-swatchbook skills__icon"></i>
                         <div>
-                            <h1 class="skills__titles">UX/UI Designer</h1>
+                            <h1 class="skills__titles">UX/UI Design</h1>
                             <span class="skills__subtitle">More than 2 years</span>
                         </div>
                         <i class="uil uil-angle-down skills__arrow"></i>
@@ -508,7 +509,7 @@
               <!--==================== QUALIFICATION 1 ====================-->
               <div class="qualification__data">
                 <div>
-                  <h3 class="qualification__title">Frontend Developer</h3>
+                  <h3 class="qualification__title">Frontend Web Developer</h3>
                   <span class="qualification__subtitle">NG - iRun Technologies</span>
                   <div class="qualification__calender">
                     <i class="uil uil-calendar-alt"></i>
@@ -521,6 +522,7 @@
                   <span class="qualification__line"></span>
                 </div>
               </div>
+              
               <!--==================== QUALIFICATION 2 ====================-->
               <div class="qualification__data">
                 <div></div>
@@ -531,28 +533,46 @@
                 </div>
 
                 <div>
-                  <h3 class="qualification__title">Operations Manager</h3>
-                  <span class="qualification__subtitle">NG - Thesaurus Gardens Ltd</span>
+                  <h3 class="qualification__title">Marketing Executive</h3>
+                  <span class="qualification__subtitle">NG - SWHAG Ltd</span>
                   <div class="qualification__calender">
                     <i class="uil uil-calendar-alt"></i>
-                    2020 - 2021
+                    2022
                   </div>
                 </div>
               </div>
               <!--==================== QUALIFICATION 3 ====================-->
               <div class="qualification__data">
                 <div>
-                  <h3 class="qualification__title">Planning Analyst</h3>
-                  <span class="qualification__subtitle">NG - TG Limited</span>
+                  <h3 class="qualification__title">Marketing Manager</h3>
+                  <span class="qualification__subtitle">NG - Thesaurus Gardens Limited</span>
                   <div class="qualification__calender">
                     <i class="uil uil-calendar-alt"></i>
-                    2019 - 2020
+                    2019 - 2021
                   </div>
                 </div>
 
                 <div>
                   <span class="qualification__rounder"></span>
+                  <span class="qualification__line"></span>
+                </div>
+              </div>
+              <!--==================== QUALIFICATION 4 ====================-->
+              <div class="qualification__data">
+                <div></div>
+
+                <div>
+                  <span class="qualification__rounder"></span>
                   <!-- <span class="qualification__line"></span> -->
+                </div>
+
+                <div>
+                  <h3 class="qualification__title">Marketing Executive - Intern</h3>
+                  <span class="qualification__subtitle">NG - Thesaurus Gardens Ltd</span>
+                  <div class="qualification__calender">
+                    <i class="uil uil-calendar-alt"></i>
+                    2019
+                  </div>
                 </div>
               </div>
             </div>
