updated description and title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Amanamabasi Akpan">
     <meta name="keywords" content="Hire a web developer, web developer in lagos, freelance web developer, react developer">
-    <meta name="description" content="Get 20% off on all projects, Hire a freelance web developer to build your web projects">
+    <meta name="description" content="Get 20% off on all projects, Hire a web developer / digital marketer to build your projects and drive your sales campaigns">
 
     <!--==================== UNICONS ====================-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.0/css/line.css">
@@ -16,7 +16,7 @@
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="./assets/css/styles.css" />
 
-    <title>Hire a Web Developer</title>
+    <title>Hire Amanamabasi</title>
     <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
   </head>
   <body>
